--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         - name: Install go
           uses: actions/setup-go@v3
           with:
-            go-version: '^1.20.0'
+            go-version: '^1.21.0'
         - name: "Installed go version"
           run: go version
         - name: "Build"
@@ -27,3 +27,6 @@ jobs:
             go test ./... -race -coverprofile=coverage.out
         - name: "Code coverage"
           uses: codecov/codecov-action@v3
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            fail_ci_if_error: true
