--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,11 @@ jobs:
             go build ./...
         - name: "Test"
           run: |
-            go test ./... -race -coverprofile=coverage.out
+            go test ./... -race -coverpkg=all -coverprofile=coverage.out
+        - name: "Exclude codecoverage and combine coverage files" # known bug that files parameter is ignored https://github.com/codecov/codecov-action/issues/1285 so unfiltered files must be overriden
+          run: |
+            grep -v -E -f .covignore coverage.out > coverage.filtered.out
+            mv coverage.filtered.out coverage.out
         - name: "Code coverage"
           uses: codecov/codecov-action@v3
           with:
