--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,12 @@ name: protobuf-go-ci
 
 jobs:
     ci:
-      name: "CI"
+      name: ci
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         - name: Install go
-          uses: actions/setup-go@v3
+          uses: actions/setup-go@v5
           with:
             go-version: '^1.21.0'
         - name: "Installed go version"
@@ -30,7 +30,7 @@ jobs:
             grep -v -E -f .covignore coverage.out > coverage.filtered.out
             mv coverage.filtered.out coverage.out
         - name: "Code coverage"
-          uses: codecov/codecov-action@v3
+          uses: codecov/codecov-action@v4
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
             fail_ci_if_error: true
